--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "node": "^22.13.0",
     "socket.io": "^4.8.1"
   }
